--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="canonical" href="https://expense-tracker-app-manthanank.vercel.app/">
+  <meta property="og:title" content="Expense Tracker App" />
+  <meta property="og:description" content="A simple expense tracker app, built with Angular. It helps you to track your expenses. You can add, edit, delete, and filter your expenses." />
+  <meta property="og:image" content="https://expense-tracker-app-manthanank.vercel.app/image.jpg" />
+  <meta property="og:url" content="https://expense-tracker-app-manthanank.vercel.app/" />
 </head>
 
 <body>
