chore: Update login and signup components with reactive forms and password visibility toggle

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="canonical" href="https://expense-tracker-app-manthanank.vercel.app/">
   <meta property="og:title" content="Expense Tracker App" />
-  <meta property="og:description" content="A simple expense tracker app, built with Angular. It helps you to track your expenses. You can add, edit, delete, and filter your expenses." />
+  <meta property="og:description"
+    content="A simple expense tracker app, built with Angular. It helps you to track your expenses. You can add, edit, delete, and filter your expenses." />
   <meta property="og:image" content="https://expense-tracker-app-manthanank.vercel.app/image.jpg" />
   <meta property="og:url" content="https://expense-tracker-app-manthanank.vercel.app/" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
