chore: Add meta tags for author, keywords, and robots in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="canonical" href="https://expense-tracker-app-manthanank.vercel.app/">
   <meta property="og:title" content="Expense Tracker App" />
+  <meta name="author" content="Manthan Ankolekar" />
+  <meta name="keywords" content="angular, nodejs. express, mongodb" />
+  <meta name="robots" content="index, follow" />
   <meta property="og:description"
     content="A simple expense tracker app, built with Angular. It helps you to track your expenses. You can add, edit, delete, and filter your expenses." />
   <meta property="og:image" content="https://expense-tracker-app-manthanank.vercel.app/image.jpg" />
